--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-     		<meta http-equiv="refresh" content="1;url=https://www.moku.ink">
+     		<meta http-equiv="refresh" content="5;url=https://www.moku.ink">
+		<script language="javascript" type="text/javascript">   
+    			window.location.href = 'https://www.moku.ink';
+		</script>
 		<title></title>
 	</head>
 	<body>
