--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<script language="javascript" type="text/javascript">   
     			window.location.href = 'https://www.moku.ink';
 		</script>
-		<title></title>
+		<title>请稍候...</title>
 	</head>
 	<body>
 	</body>
