--- a/index.html
+++ b/index.html
@@ -1,13 +1,34 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<meta charset="utf-8">
-     		<meta http-equiv="refresh" content="5;url=https://www.moku.ink">
-		<script language="javascript" type="text/javascript">   
-    			window.location.href = 'https://www.moku.ink';
-		</script>
-		<title>请稍候...</title>
-	</head>
-	<body>
-	</body>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title>Moku.ink</title>
+<style type="text/css">
+.bg{
+	background-image: url(img_home/bg.jpg);
+	background-repeat: no-repeat;
+	background-size: cover;
+}
+.main-title {
+	position: absolute;
+	margin: 0;
+	padding: 0;
+	color: #f9f1e9;
+	text-align: center;
+	top: 85%;
+	left: 80%;
+	-webkit-transform: translate3d(-50%,-50%,0);
+	transform: translate3d(-50%,-50%,0);
+	text-shadow:#111 3px 4px 5px;
+	font-size: 100px
+}
+
+</style>
+</head>
+<body>
+<body class="bg">
+</body>
+<h1 class="main-title">Moku.ink<br>
+</h1>
+</body>
 </html>
