--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <body>
 <body class="bg">
 </body>
-<h1 class="main-title">Moku.ink<br>
+<h1 class="main-title">Moku.ink by Vikot106<br>
 </h1>
 </body>
 </html>
