--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Moku.ink</title>
+<title>Moku.ink by Vikot106</title>
 <style type="text/css">
 .bg{
 	background-image: url(img_home/bg.jpg);
@@ -28,7 +28,7 @@
 <body>
 <body class="bg">
 </body>
-<h1 class="main-title">Moku.ink by Vikot106<br>
+<h1 class="main-title">Moku.ink<br>
 </h1>
 </body>
 </html>
